src/corelib/thread/qthreadpool_p.h
@@ -134,6 +134,8 @@ public:
     void stealAndRunRunnable(QRunnable *runnable);
     void deletePageIfFinished(QueuePage *page);
 
+    static QThreadPool *qtGuiInstance();
+
     mutable QMutex mutex;
     QSet<QThreadPoolThread *> allThreads;
     QQueue<QThreadPoolThread *> waitingThreads;
